--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <button class="subtract">&minus;</button>
                     <button class="multiply">&times;</button>
                     <button class="divide">/</button>
+                    <button class="plus-minus">+/-</button>
                     <button class="equals">&equals;</button>
                 </section>
                 <section class="digits">
@@ -57,7 +58,7 @@
                 <section class="extra">
                     <button class="sq-rt">√</button>
                     <button class="power">(x<sup>y</sup>)</button>
-                    <button class="plus-minus">+/-</button>
+                    <button class="pi">π</button>
                 </section>
             </section>
 
